fixed some layout bugs and have rough added buttons. next step button fixes and final layout fixes.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,26 +1,43 @@
 h1 {
-	font-family: georgia, sans-serif;
+	font-family: arial, sans-serif;
 	font-style: bold;
 	font-size: 20px;
 	display: inline-block;
 	float: right;
+	color: #1DA1F2;
 }
 
 p {
-	font-family: georgia, sans-serif;
+	font-family: arial, sans-serif;
 	float: left;
+	color: #1DA1F2;
 }
 
-i {
+.flipbox i {
 	color: #1DA1F2;
 	margin-top: 7px;
 	margin-left: 3px;
+}
+
+.subbox i {
+	color: #1DA1F2;
+	margin-top: 13px;
+	margin-left: 17px;
+	display: inline-block;
 }
 
 img {
 	max-width: 100%;
 	max-height: 100%;
 	margin-top: -30px;
+}
+
+.subbox img {
+	max-height: 50%;
+	max-width: 50%;
+	display: inline-block;
+	margin-top: 13px;
+	margin-left: 17px;
 }
 
 .container {
@@ -31,7 +48,6 @@ img {
 	vertical-align: top;
 	margin: auto;
 	width: 100%;
-	height: 50%;
 }
 
 .column {
@@ -42,6 +58,12 @@ img {
 	height: 100%;
 }
 
+.wrap {
+	border: 2px;
+	border-style: solid;
+	border-color: #1DA1F2;
+}
+
 .one {
 	margin-left: 5%;
 	width: 22%; 
@@ -50,9 +72,6 @@ img {
 	vertical-align: center;
 	align: center;
 	box-sizing: border-box;
-	border: 2px;
-	border-style: solid;
-	border-color: #1DA1F2;
 }
 
 .two {
@@ -63,9 +82,6 @@ img {
 	vertical-align: center;
 	align: center;
 	box-sizing: border-box;
-	border: 2px;
-	border-style: solid;
-	border-color: #1DA1F2;
 }
 
 .three {
@@ -76,9 +92,6 @@ img {
 	vertical-align: center;
 	align: center;
 	box-sizing: border-box;
-	border: 2px;
-	border-style: solid;
-	border-color: #1DA1F2;
 }
 
 .flipbox {
@@ -98,33 +111,40 @@ img {
 .middle {
 	width: 100%;
 	height: 40px;
-	border: 2px solid;
-	border-bottom:none;
-	border-left: none;
-	border-right: none;
+	display: inline-block;
+	border-top:2px solid;
 	border-color: #1DA1F2;
-	display: block;
 }
 
 .bottom {
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	display: inline-block;
 }
 
+.subbox {
+	display: inline-block;
+	vertical-align: top;
+	height: 100%;
+	width: 18.8%;
+	border-right:2px solid;
+	border-color: #1DA1F2;
+	margin-left: -2px;
+}
+
 .dropbtn {
-    background-color: #81BCE5;
-    color: white;
-    margin: 4px;
-    padding: 16px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    vertical-align: top;
+    display: inline-block;
 }
 
 .dropdown {
   position: absolute;
-  margin-top:10px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 4px;
 }
 
 .dropdown-content {
@@ -143,15 +163,16 @@ img {
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
+  background-color: #1DA1F2;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
+    align-content: center;
 }
 
 .dropdown:hover .dropbtn {
-    background-color: #3e8e41;
+    background-color: #1DA1F2;
 }
 
 .dropdown-content ul {
